# staged-size-checker

./: Cargo.toml  README.html  README.md
src/: check_files.rs  lib.rs  main.rs
tests/: check_files.rs
