[package]
name = "staged-size-checker"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/a2-ai-tech-training/staged-size-checker"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = { version = "4.5.4", features = ["derive"] }
git2 = "0.18.3"
parse-size = "1.0.0"
